--- a/SleepTracker/Controls/StyledNavigationPage.xaml
+++ b/SleepTracker/Controls/StyledNavigationPage.xaml
@@ -1,5 +1,8 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SleepTracker.Controls.StyledNavigationPage">
-	<ContentPage.Content>
-	</ContentPage.Content>
-</ContentPage>
+<?xml version="1.0" encoding="UTF-8"?>
+<NavigationPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    x:Class="SleepTracker.Controls.StyledNavigationPage"
+    BarTextColor="{DynamicResource MainBarTextColor}"
+    BarBackgroundColor="{DynamicResource MainBarBackgroundColor}"
+    BackgroundColor="{DynamicResource MainBackgroundColor}">
+</NavigationPage>
