--- a/SleepTracker/Pages/ExportPage.xaml
+++ b/SleepTracker/Pages/ExportPage.xaml
@@ -1,5 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SleepTracker.Pages.ExportPage">
-	<ContentPage.Content>
-	</ContentPage.Content>
+<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    x:Class="SleepTracker.Pages.ExportPage">
+
+    <StackLayout x:Name="testLayout"
+                 VerticalOptions="FillAndExpand">
+    </StackLayout>
+
+    <Button x:Name="testExport" Text="Test" Clicked="Handle_Clicked"></Button>
+    
 </ContentPage>
