--- a/SleepTracker/Pages/SettingsPage.xaml
+++ b/SleepTracker/Pages/SettingsPage.xaml
@@ -1,5 +1,23 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SleepTracker.Pages.SettingsPage">
-	<ContentPage.Content>
-	</ContentPage.Content>
+<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    x:Class="SleepTracker.Pages.SettingsPage"
+    BackgroundColor="{DynamicResource MainBackgroundColor}"
+    Title="Settings">
+
+<StackLayout Orientation="Vertical">
+    <StackLayout Orientation="Horizontal">
+            <Label Text="Use Night Model"
+                   TextColor="{DynamicResource MainTextColor}"
+                   HorizontalOptions="StartAndExpand"></Label>
+            <Switch x:Name="nightMode"
+                    HorizontalOptions="End"
+                    IsToggled="{Binding IsInNightModeToggle}"
+                    Toggled="Handle_Toggled">
+            </Switch>
+            
+    </StackLayout>
+
+</StackLayout>
+    
 </ContentPage>
